welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:5: error: unclosed comment
/*avance()
^Source:2: error: Missing closing brace `}' assumed here
droite()
^Source:3: error: expected class or object definition
baisseBrosse()
^Source:4: error: expected class or object definition
avance()
^